# uldren-loom

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: bindings.yml  ci.yml  codeql.yml  pr-gate.yml  release-plz.yml  scorecard.yml
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/example/: main.cpp
bindings/cpp/include/: loom.hpp
bindings/jvm/: README.md  build.gradle.kts  settings.gradle.kts
bindings/jvm/src/main/java/ai/uldren/loom/: Loom.java
bindings/kotlin/: CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts
bindings/kotlin/native/: uldren_loom_jni.c
bindings/kotlin/src/androidMain/kotlin/ai/uldren/loom/: Loom.android.kt
bindings/kotlin/src/commonMain/kotlin/ai/uldren/loom/: Loom.kt
bindings/kotlin/src/jvmMain/kotlin/ai/uldren/loom/: Loom.jvm.kt
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
bindings/node/src/: lib.rs
bindings/react-native/: README.md  UldrenLoom.podspec  package-lock.json  package.json
bindings/react-native/android/: CMakeLists.txt  build.gradle
bindings/react-native/android/src/main/cpp/: UldrenLoom.cpp
bindings/react-native/android/src/main/java/ai/uldren/loom/rn/: UldrenLoomModule.kt  UldrenLoomPackage.kt
bindings/react-native/ios/: UldrenLoom.h  UldrenLoom.mm
bindings/react-native/src/: NativeUldrenLoom.ts  index.ts
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/UldrenLoom/: Loom.swift
bindings/swift/Tests/UldrenLoomTests/: LoomTests.swift
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/loom-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-cli/src/: main.rs
crates/loom-conformance/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-conformance/src/: lib.rs
crates/loom-core/: CHANGELOG.md  Cargo.toml  README.md
crates/loom-core/src/: digest.rs  error.rs  lib.rs  object.rs  provider.rs
crates/loom-core/src/provider/: memory.rs
crates/loom-core/tests/: core.rs
crates/loom-ffi/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
crates/loom-ffi/src/: lib.rs
docs/: DEVELOPMENT.md
idl/: loom.idl
include/: loom.h
scripts/: sync-binding-versions.sh
