[package]
authors = ["Uldren Technologies LLC"]
description = "Node.js binding for Uldren Loom (napi-rs). Published as @uldrenai/loom."
edition = "2024"
license = "BUSL-1.1"
name = "loom-node"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
loom-core = { package = "uldren-loom-core", path = "../../crates/loom-core" }
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[lints.clippy]
all = { level = "warn", priority = -1 }
