[package]
authors = ["Uldren Technologies LLC"]
description = "WASM binding for Uldren Loom (wasm-bindgen). Published as @uldrenai/loom-wasm."
edition = "2024"
license = "BUSL-1.1"
name = "loom-wasm"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
loom-core = { path = "../../crates/loom-core" }
wasm-bindgen = "0.2"

[lints.clippy]
all = { level = "warn", priority = -1 }
