[package]
authors.workspace = true
description = "Shared conformance vectors and a generic runner that any Uldren Loom backend must pass."
edition.workspace = true
license.workspace = true
name = "uldren-loom-conformance"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
loom-core.workspace = true
